logs/Slang/chapter-5/5.9-string-word-assignment.sv.log
name: string-word-assignment
description: String assignment tests
should_fail: 0
tags: 5.9
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-5/5.9-string-word-assignment.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-5/5.9-string-word-assignment.sv:8:22: error: value of type 'bit[23:0]' cannot be assigned to type 'unpacked array [24:0] of 'bit''
  bit   a[8 * 3 : 0] = "hi0";
                     ^ ~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-5/5.9-string-word-assignment.sv:9:22: error: value of type 'bit[23:0]' cannot be assigned to type 'unpacked array [3:0] of 'byte''
  byte      b[3 : 0] = "hi2";
                     ^ ~~~~~
